--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,8 +1,7 @@
 .foot {
     display: flex; 
     align-items: center; 
-    justify-content: center; 
-    text-shadow: 2px 2px rgb(0, 0, 0) ;
+    justify-content: left; 
     padding: 10px;
     position: fixed;
     bottom: 0;
